Added configuration file features (config.ini)

--- a/config_template.ini
+++ b/config_template.ini
@@ -1,22 +1,24 @@
 # ######################################################################################################################
 [DEFAULT] # Test and Training defaults and General Options
 # ----------------------------------------------------------------------------------------------------------------------
-copy_script_dir = 'train_dir'
 
 # ---------> Training & Testing: Data and Network architecture
 shuffle = True
 augment = True
-resample_n = None
+resample_n = 30
 keep_prob = 0.9
 batch_size = 1
 
 data_layer_type = hdf5
-shape_img = [1024, 1024, 4]
-shape_label = [1024, 1024, 1]
-shape_weights = [1024, 1024, 1]
+shape_img = [512, 512, 4]
+shape_label = [512, 512, 1]
+shape_weights = [512, 512, 1]
+#shape_img = [1024, 1024, 4]
+#shape_label = [1024, 1024, 1]
+#shape_weights = [1024, 1024, 1]
 
-# None or [sizeX, sizeY]
-resize = [512, 512]
+# None or [sizeX, sizeY]  # [512, 512]
+resize = None
 # None / scale / center_crop or random_crop (default)
 resize_method = None
 
@@ -25,23 +27,25 @@ resize_method = None
 n_start_features = 64
 n_contracting_blocks = 5
 
-# None or batch_norm (tc.layers.batch_norm)
-norm_fn = None
-# None (for no normalization or default params) or True to load params from section below
-normalizer_params = None
+# for aleatoric uncertainty
+aleatoric_samples = 10
 
-[normalizer_params]
+# None or batch_norm (tc.layers.batch_norm)
+norm_fn = tc.layers.batch_norm
+
+# None (for no normalization or default params) or True to load params from below
+norm_fn_params = True
 # True / False or None if it should correspond to current phase
 # True corresponds to immediate normalization
-is_training = None
+norm_fn_param_is_training = None
 # for stability
-zero_debias_moving_mean = True
+norm_fn_param_zero_debias_moving_mean = True
 # default is 0.999, lower is supposed to make normalization params more stable
-decay = 0.9
+norm_fn_param_decay = 0.9
 
 
 # ######################################################################################################################
-[TRAINING]
+[TRAIN]
 # ----------------------------------------------------------------------------------------------------------------------
 train_name = augment_saver
 
@@ -49,24 +53,25 @@ optimizer = Adam
 init_learning_rate = 0.0001
 max_iter = 60000
 saver_interval = 1000
+continue = True
 
 prefetch_threads = 16
 prefetch_n = 32
 
-# ---------> TRAINING: Override defaults
+# ---------> Training OVERRIDE defaults
 # keep_prob = 1.0
-shuffle = False
-augment = False
-resample_n = 5
+shuffle = True
+augment = True
+resample_n = 1000
 # batch_size = 1
 
 
 # ######################################################################################################################
-[TESTING]
+[TEST]
 # ----------------------------------------------------------------------------------------------------------------------
 n_samples = 20
 
-# ---------> Testing: Override defaults
+# ---------> Testing OVERRIDE defaults
 # keep_prob = 1.0
 shuffle = False
 augment = False
