Aleatoric loss update, also config

--- a/config_template.ini
+++ b/config_template.ini
@@ -5,8 +5,8 @@
 # ---------> Training & Testing: Data and Network architecture
 shuffle = True
 augment = True
-resample_n = 30
-keep_prob = 0.9
+resample_n = None
+keep_prob = 0.5
 batch_size = 1
 
 data_layer_type = hdf5
@@ -29,6 +29,7 @@ n_contracting_blocks = 5
 
 # for aleatoric uncertainty
 aleatoric_samples = 10
+aleatoric_distr = None
 
 # None or batch_norm (tc.layers.batch_norm)
 norm_fn = tc.layers.batch_norm
@@ -55,14 +56,14 @@ max_iter = 60000
 saver_interval = 1000
 continue = True
 
-prefetch_threads = 16
+prefetch_threads = 12
 prefetch_n = 32
 
 # ---------> Training OVERRIDE defaults
 # keep_prob = 1.0
-shuffle = True
-augment = True
-resample_n = 1000
+#shuffle = True
+#augment = True
+#resample_n = 1000
 # batch_size = 1
 
 
@@ -75,7 +76,7 @@ n_samples = 20
 # keep_prob = 1.0
 shuffle = False
 augment = False
-resample_n = 5
+resample_n = None
 # batch_size = 1
 
 # None or [sizeX, sizeY]
