Added validation during training. Changed config, model and main_script.

--- a/config_template.ini
+++ b/config_template.ini
@@ -1,6 +1,13 @@
 # ######################################################################################################################
 [DEFAULT] # Test and Training defaults and General Options
 # ----------------------------------------------------------------------------------------------------------------------
+name = None
+output_dir = None
+train_dir = None
+continue_training = None
+
+test_dir = None
+checkpoint = None
 
 # ---------> Training & Testing: Data and Network architecture
 shuffle = True
@@ -9,10 +16,14 @@ resample_n = None
 keep_prob = 0.5
 batch_size = 1
 
+# Path to dataset that will be used by default (overwrite in each section)
+dataset = /home/hornebeh/proj_tf_unet/data/hdf5/trainset.h5
+# data_layer type
 data_layer_type = hdf5
 shape_img = [512, 512, 4]
 shape_label = [512, 512, 1]
 shape_weights = [512, 512, 1]
+n_class = 2
 #shape_img = [1024, 1024, 4]
 #shape_label = [1024, 1024, 1]
 #shape_weights = [1024, 1024, 1]
@@ -28,7 +39,7 @@ n_start_features = 64
 n_contracting_blocks = 5
 
 # for aleatoric uncertainty
-aleatoric_samples = 10
+aleatoric_samples = None
 aleatoric_distr = None
 
 # None or batch_norm (tc.layers.batch_norm)
@@ -38,16 +49,20 @@ norm_fn = tc.layers.batch_norm
 norm_fn_params = True
 # True / False or None if it should correspond to current phase
 # True corresponds to immediate normalization
-norm_fn_param_is_training = None
+norm_fn_param_is_training = True
 # for stability
 norm_fn_param_zero_debias_moving_mean = True
 # default is 0.999, lower is supposed to make normalization params more stable
 norm_fn_param_decay = 0.9
 
+prefetch_threads = 12
+prefetch_n = 32
+
 
 # ######################################################################################################################
 [TRAIN]
 # ----------------------------------------------------------------------------------------------------------------------
+dataset = /home/hornebeh/proj_tf_unet/data/hdf5/trainset.h5
 train_name = augment_saver
 
 optimizer = Adam
@@ -55,9 +70,6 @@ init_learning_rate = 0.0001
 max_iter = 60000
 saver_interval = 1000
 continue = True
-
-prefetch_threads = 12
-prefetch_n = 32
 
 # ---------> Training OVERRIDE defaults
 # keep_prob = 1.0
@@ -70,7 +82,8 @@ prefetch_n = 32
 # ######################################################################################################################
 [TEST]
 # ----------------------------------------------------------------------------------------------------------------------
-n_samples = 20
+dataset = /home/hornebeh/proj_tf_unet/data/hdf5/testset.h5
+n_samples = 2
 
 # ---------> Testing OVERRIDE defaults
 # keep_prob = 1.0
@@ -80,6 +93,26 @@ resample_n = None
 # batch_size = 1
 
 # None or [sizeX, sizeY]
-resize = [512, 512]
+;resize = [512, 512]
 # None / "scale" / "center_crop" or "random_crop" (default)
-resize_method = center_crop
+;resize_method = center_crop
+
+
+# ######################################################################################################################
+[VAL]
+# ----------------------------------------------------------------------------------------------------------------------
+dataset = /home/hornebeh/proj_tf_unet/data/hdf5/valset.h5
+val_dir = None
+n_samples = 2
+
+# ---------> Validation OVERRIDE defaults
+shuffle = False
+augment = False
+resample_n = None
+# batch_size = 1
+# keep_prob = 1.0
+
+# None or [sizeX, sizeY]
+;resize = [512, 512]
+# None / "scale" / "center_crop" or "random_crop" (default)
+;resize_method = center_crop
