Fixed aleatoric loss. Added args.config. Changed validation setup.

--- a/config.ini
+++ b/config.ini
@@ -1,19 +1,15 @@
 # ######################################################################################################################
 [DEFAULT] # Test and Training defaults and General Options
 # ----------------------------------------------------------------------------------------------------------------------
-name = None
-output_dir = None
-train_dir = None
-continue_training = None
-
-test_dir = None
-checkpoint = None
+# The parameters [output_dir, name] respectively [train_dir] as well as
+# [continue_training, test_dir, checkpoint] are command line arguments
+# They can be specified via CL when running the script or will default to sensible values.
 
 # ---------> Training & Testing: Data and Network architecture
 shuffle = True
 augment = True
 resample_n = None
-keep_prob = 0.5
+keep_prob = 0.9
 batch_size = 1
 
 # Path to dataset that will be used by default (overwrite in each section)
@@ -39,8 +35,9 @@ n_start_features = 64
 n_contracting_blocks = 5
 
 # for aleatoric uncertainty
-aleatoric_samples = None
+aleatoric_samples = 10
 aleatoric_distr = None
+aleatoric_reg = None
 
 # None or batch_norm (tc.layers.batch_norm)
 norm_fn = tc.layers.batch_norm
@@ -63,7 +60,7 @@ prefetch_n = 32
 [TRAIN]
 # ----------------------------------------------------------------------------------------------------------------------
 dataset = /home/hornebeh/proj_tf_unet/data/hdf5/trainset.h5
-train_name = augment_saver
+train_name = None
 
 optimizer = Adam
 init_learning_rate = 0.0001
@@ -82,8 +79,8 @@ continue = True
 # ######################################################################################################################
 [TEST]
 # ----------------------------------------------------------------------------------------------------------------------
-dataset = /home/hornebeh/proj_tf_unet/data/hdf5/testset.h5
-n_samples = 2
+dataset = /misc/lmbraid19/hornebeh/std/projects/remote_deployment/win_tf_unet/data/hdf5/testset.h5
+n_samples = 19
 
 # ---------> Testing OVERRIDE defaults
 # keep_prob = 1.0
@@ -102,8 +99,11 @@ resample_n = None
 [VAL]
 # ----------------------------------------------------------------------------------------------------------------------
 dataset = /home/hornebeh/proj_tf_unet/data/hdf5/valset.h5
+val_intervall = 1
+
+val_intervall_sample = None
+n_samples = None
 val_dir = None
-n_samples = 2
 
 # ---------> Validation OVERRIDE defaults
 shuffle = False
