Aleatoric loss: Fixes, runs look good - next: weights in loss

--- a/config.ini
+++ b/config.ini
@@ -28,15 +28,18 @@ n_class = 2
 resize = None
 # None / scale / center_crop or random_crop (default)
 resize_method = None
-
+Aleatoric loss: Cleanup, config, sigma computation.
 # working configurations for 12 GB GPU RAM:
 # size 512x512: batch_size= 1 | 2 | 8 ; n_start_features= 64 | 64 | 16
 n_start_features = 64
 n_contracting_blocks = 5
 
 # for aleatoric uncertainty
-aleatoric_samples = 10
+# unet 1x512x512|64|5 with val and mean_square regularizrt:
+# Al:300 = ~0.5ips / 50 = ~1.0ips / 10 = ~1.1ips
+aleatoric_sample_n = 50
 aleatoric_distr = None
+# adds a regularizer term to the aleatoric loss
 aleatoric_reg = None
 
 # None or batch_norm (tc.layers.batch_norm)
@@ -63,8 +66,9 @@ dataset = /home/hornebeh/proj_tf_unet/data/hdf5/trainset.h5
 train_name = None
 
 optimizer = Adam
-init_learning_rate = 0.0001
-max_iter = 60000
+learning_rate_init = 0.0001
+learning_rate_decay = 0.5
+max_iter = 30000
 saver_interval = 1000
 continue = True
 
@@ -99,7 +103,7 @@ resample_n = None
 [VAL]
 # ----------------------------------------------------------------------------------------------------------------------
 dataset = /home/hornebeh/proj_tf_unet/data/hdf5/valset.h5
-val_intervall = 1
+val_intervall = 20
 
 val_intervall_sample = None
 n_samples = None
