Changes to uncertainty

--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@
 shuffle = True
 augment = True
 resample_n = None
-keep_prob = 0.9
+keep_prob = 0.8
 batch_size = 1
 
 # Path to dataset that will be used by default (overwrite in each section)
@@ -20,24 +20,24 @@ shape_img = [512, 512, 4]
 shape_label = [512, 512, 1]
 shape_weights = [512, 512, 1]
 n_class = 2
-#shape_img = [1024, 1024, 4]
-#shape_label = [1024, 1024, 1]
-#shape_weights = [1024, 1024, 1]
 
 # None or [sizeX, sizeY]  # [512, 512]
 resize = None
 # None / scale / center_crop or random_crop (default)
 resize_method = None
-Aleatoric loss: Cleanup, config, sigma computation.
+
 # working configurations for 12 GB GPU RAM:
 # size 512x512: batch_size= 1 | 2 | 8 ; n_start_features= 64 | 64 | 16
 n_start_features = 64
 n_contracting_blocks = 5
 
+# load checkpoint from specific iteration (for test or continued training)
+global_step = None
+
 # for aleatoric uncertainty
 # unet 1x512x512|64|5 with val and mean_square regularizrt:
 # Al:300 = ~0.5ips / 50 = ~1.0ips / 10 = ~1.1ips
-aleatoric_sample_n = 50
+aleatoric_sample_n = None
 aleatoric_distr = None
 # adds a regularizer term to the aleatoric loss
 aleatoric_reg = None
@@ -62,37 +62,52 @@ prefetch_n = 32
 # ######################################################################################################################
 [TRAIN]
 # ----------------------------------------------------------------------------------------------------------------------
-dataset = /home/hornebeh/proj_tf_unet/data/hdf5/trainset.h5
-train_name = None
+#dataset = /home/hornebeh/proj_tf_unet/data/hdf5/trainset.h5
+train_name = lr1e-6
 
 optimizer = Adam
-learning_rate_init = 0.0001
+learning_rate_init = 0.00001
 learning_rate_decay = 0.5
 max_iter = 30000
 saver_interval = 1000
 continue = True
 
 # ---------> Training OVERRIDE defaults
-# keep_prob = 1.0
+keep_prob = 1.0
 #shuffle = True
 #augment = True
 #resample_n = 1000
-# batch_size = 1
 
+# batch_size = 1
+# unet 1x512x512|64|5 with val and mean_square regularizrt:
+# Al:300 = ~0.5ips / 50 = ~1.0ips / 10 = ~1.1ips
+aleatoric_sample_n = None
+
+;dataset = /home/hornebeh/proj_tf_unet/data/hdf5/std_data_v0_2_merged.h5
+;shape_img = [1024, 1024, 4]
+;shape_label = [1024, 1024, 1]
+;shape_weights = [1024, 1024, 1]
+;# None or [sizeX, sizeY]  # [512, 512]
+;resize = [512, 512]
+;# None / scale / center_crop or random_crop (default)
+;resize_method = None
 
 # ######################################################################################################################
 [TEST]
 # ----------------------------------------------------------------------------------------------------------------------
+#dataset = /misc/lmbraid19/hornebeh/std/projects/remote_deployment/win_tf_unet/data/hdf5/trainset.h5
 dataset = /misc/lmbraid19/hornebeh/std/projects/remote_deployment/win_tf_unet/data/hdf5/testset.h5
 n_samples = 19
 
 # ---------> Testing OVERRIDE defaults
-# keep_prob = 1.0
+#global_step = None
+keep_prob = 0.5
+aleatoric_sample_n = 50
 shuffle = False
 augment = False
-resample_n = None
-# batch_size = 1
-
+# during testtime, resample_n represents epistemic uncertainty samples
+resample_n = 20
+# batch_size = 1eh/std/projects/remote_deployment/win_tf_unet/data/hdf5/trainset.h5
 # None or [sizeX, sizeY]
 ;resize = [512, 512]
 # None / "scale" / "center_crop" or "random_crop" (default)
