Final version for experiments

--- a/config_test.ini
+++ b/config_test.ini
@@ -13,7 +13,7 @@ keep_prob = 0.8
 batch_size = 1
 
 # Path to dataset that will be used by default (overwrite in each section)
-dataset = /home/hornebeh/proj_tf_unet/data/hdf5/trainset.h5
+dataset = testconfig
 # data_layer type
 data_layer_type = hdf5
 shape_img = [512, 512, 4]
@@ -66,50 +66,38 @@ prefetch_n = 32
 train_name = None
 
 optimizer = Adam
-# default is 0.0001 (1e-4)
+# default is 0.0001
 learning_rate_init = 0.0001
 learning_rate_decay = 0.5
-max_iter = 60000
+max_iter = 30000
 saver_interval = 1000
 continue = True
 
 # ---------> Training OVERRIDE defaults
-keep_prob = 1.0
-shuffle = True
-augment = True
-#resample_n = 1000
-
-# batch_size = 1
-# unet 1x512x512|64|5 with val and mean_square regularizrt:
-# Al:300 = ~0.5ips / 50 = ~1.0ips / 10 = ~1.1ips
-aleatoric_sample_n = 200
-# None or batch_norm (tc.layers.batch_norm)
-#norm_fn = None
-;dataset = /home/hornebeh/proj_tf_unet/data/hdf5/std_data_v0_2_merged.h5
-;shape_img = [1024, 1024, 4]
-;shape_label = [1024, 1024, 1]
-;shape_weights = [1024, 1024, 1]
-;# None or [sizeX, sizeY]  # [512, 512]
-;resize = [512, 512]
-;# None / scale / center_crop or random_crop (default)
-;resize_method = None
 
 # ######################################################################################################################
 [TEST]
 # ----------------------------------------------------------------------------------------------------------------------
 #dataset = /misc/lmbraid19/hornebeh/std/projects/remote_deployment/win_tf_unet/data/hdf5/trainset.h5
 dataset = /misc/lmbraid19/hornebeh/std/projects/remote_deployment/win_tf_unet/data/hdf5/testset.h5
+#dataset = /home/hornebeh/proj_tf_unet/data/hdf5/valset.h5
 n_samples = 19
 
 # ---------> Testing OVERRIDE defaults
-#global_step = None
-keep_prob = 1.0
+# 5000, 30000, (60000)
+global_step = 30000
+# 1.0, 0.95, 0.9, 0.8, 0.5, (0.3)
+keep_prob = 0.8
+# None, 50
 aleatoric_sample_n = 50
 shuffle = False
 augment = False
 # during testtime, resample_n represents epistemic uncertainty samples
-resample_n = 20
+# None, 20, 50, 100
+resample_n = 300
+
 # batch_size = 1eh/std/projects/remote_deployment/win_tf_unet/data/hdf5/trainset.h5
+
 # None or [sizeX, sizeY]
 ;resize = [512, 512]
 # None / "scale" / "center_crop" or "random_crop" (default)
