Clean version for sharing

--- a/config.ini
+++ b/config.ini
@@ -62,11 +62,12 @@ prefetch_n = 32
 # ######################################################################################################################
 [TRAIN]
 # ----------------------------------------------------------------------------------------------------------------------
-#dataset = /home/hornebeh/proj_tf_unet/data/hdf5/trainset.h5
+dataset = /home/hornebeh/proj_tf_unet/data/hdf5/trainset.h5
+# allows to add a training name to the train folder
 train_name = None
 
 optimizer = Adam
-# default is 0.0001 (1e-4)
+# a good value is 0.0001 (1e-4)
 learning_rate_init = 0.0001
 learning_rate_decay = 0.5
 max_iter = 60000
@@ -77,31 +78,18 @@ continue = True
 keep_prob = 1.0
 shuffle = True
 augment = True
-#resample_n = 1000
+# aleatoric_sample_n = 200
 
-# batch_size = 1
-# unet 1x512x512|64|5 with val and mean_square regularizrt:
-# Al:300 = ~0.5ips / 50 = ~1.0ips / 10 = ~1.1ips
-aleatoric_sample_n = 200
-# None or batch_norm (tc.layers.batch_norm)
-#norm_fn = None
-;dataset = /home/hornebeh/proj_tf_unet/data/hdf5/std_data_v0_2_merged.h5
-;shape_img = [1024, 1024, 4]
-;shape_label = [1024, 1024, 1]
-;shape_weights = [1024, 1024, 1]
-;# None or [sizeX, sizeY]  # [512, 512]
-;resize = [512, 512]
-;# None / scale / center_crop or random_crop (default)
-;resize_method = None
 
 # ######################################################################################################################
 [TEST]
 # ----------------------------------------------------------------------------------------------------------------------
-#dataset = /misc/lmbraid19/hornebeh/std/projects/remote_deployment/win_tf_unet/data/hdf5/trainset.h5
 dataset = /misc/lmbraid19/hornebeh/std/projects/remote_deployment/win_tf_unet/data/hdf5/testset.h5
+# the number of samples that should be tested
 n_samples = 19
 
 # ---------> Testing OVERRIDE defaults
+# specify a certain iteration to test (checkpoint needs to be available!)
 #global_step = None
 keep_prob = 1.0
 aleatoric_sample_n = 50
@@ -109,11 +97,6 @@ shuffle = False
 augment = False
 # during testtime, resample_n represents epistemic uncertainty samples
 resample_n = 20
-# batch_size = 1eh/std/projects/remote_deployment/win_tf_unet/data/hdf5/trainset.h5
-# None or [sizeX, sizeY]
-;resize = [512, 512]
-# None / "scale" / "center_crop" or "random_crop" (default)
-;resize_method = center_crop
 
 
 # ######################################################################################################################
@@ -130,10 +113,3 @@ val_dir = None
 shuffle = False
 augment = False
 resample_n = None
-# batch_size = 1
-# keep_prob = 1.0
-
-# None or [sizeX, sizeY]
-;resize = [512, 512]
-# None / "scale" / "center_crop" or "random_crop" (default)
-;resize_method = center_crop
